Fix for width so cover covers full page when scrolled

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -82,7 +82,7 @@ ul {
 	z-index: 10;
   right: -1000px;
   top: -1200px;
-  width: 2500px;
+  width: 2700px;
   height: 2500px;
 }
 
